--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,3 @@
----
 ja:
   activerecord:
     errors:
@@ -7,6 +6,15 @@ ja:
         restrict_dependent_destroy:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
+    models:
+      task: タスク
+    attributes:
+      task:
+      id: ID
+      name: タスク名
+      contents: 内容
+      created_at: 登録日時
+      dl: 期限　　　　
   date:
     abbr_day_names:
     - 日
