--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,3 +1,4 @@
+---
 ja:
   activerecord:
     errors:
@@ -10,11 +11,11 @@ ja:
       task: タスク
     attributes:
       task:
-      id: ID
-      name: タスク名
-      contents: 内容
-      created_at: 登録日時
-      dl: 期限　　　　
+        id: ID
+        name: タスク名
+        contents: 内容
+        created_at: 登録日
+        dl: 期限　　　　
   date:
     abbr_day_names:
     - 日
