--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,7 +15,7 @@ ja:
         name: タスク名
         contents: 内容
         created_at: 登録日
-        dl: 期限　　　　
+        deadline: 期限　　　　
   date:
     abbr_day_names:
     - 日
