--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -17,7 +17,16 @@ ja:
         created_at: 登録日
         deadline: 期限　
         priority: 優先度
-        status: ステータス　　　
+        status: ステータス　
+      user:
+        name: 名前
+        email: メールアドレス
+        admin: 管理者権限
+        password: パスワード
+        password_confirmation: パスワード確認
+        created_at: 登録日時
+        updated_at: 更新日時
+        　　
   date:
     abbr_day_names:
     - 日
