--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,7 +3,7 @@ ja:
   activerecord:
     errors:
       messages:
-        record_invalid: 'バリデーションに失敗しました: %{errors}'
+        record_invalid: "バリデーションに失敗しました: %{errors}"
         restrict_dependent_destroy:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
@@ -25,8 +25,7 @@ ja:
         password: パスワード
         password_confirmation: パスワード確認
         created_at: 登録日時
-        updated_at: 更新日時
-        　　
+        updated_at: 更新日時 　　
   date:
     abbr_day_names:
     - 日
